welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:1: error: ';' expected but '=' found.
nbbiscuit: Int = 0
               ^