welcome.lessons.welcome.variables.RunFour.scala.code
nbbiscuit: Int = 0
if (estSurBiscuit()){
	nbbiscuit = nbbiscuit + 1

while (nbbiscuit != 4){
	avance()
}}